[gd_scene load_steps=15 format=4 uid="uid://beoaiamgov3v0"]

[ext_resource type="Texture2D" uid="uid://4t58p5wmf3xg" path="res://art/tilesets/minigame_window.png" id="1_7a0dv"]
[ext_resource type="Script" path="res://scripts/mining_minigame.gd" id="1_53a2a"]
[ext_resource type="PackedScene" uid="uid://qtcdgg88thym" path="res://scenes/daynight_modulate.tscn" id="1_to58y"]
[ext_resource type="Texture2D" uid="uid://bwa08wlmd8xos" path="res://art/keybord and controller icons/individual sprites/keyboard/Q.png" id="2_auexb"]
[ext_resource type="PackedScene" uid="uid://jb1iar28t5oj" path="res://characters/miner_cat.tscn" id="3_h7jpv"]
[ext_resource type="Texture2D" uid="uid://q65rb1o0nj7y" path="res://art/keybord and controller icons/individual sprites/controller/controller button 55.png" id="3_shgrt"]
[ext_resource type="Texture2D" uid="uid://ca3i6mi0omyy4" path="res://art/tilesets/selenia_ground.png" id="4_7bxpi"]
[ext_resource type="Texture2D" uid="uid://bino1urum5naq" path="res://art/tilesets/stone_ore.png" id="5_5nx7y"]
[ext_resource type="Texture2D" uid="uid://c5102tegcwsl4" path="res://art/keybord and controller icons/individual sprites/keyboard/F.png" id="7_re27u"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_w4flc"]
texture = ExtResource("1_7a0dv")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_nfmkv"]
texture = ExtResource("4_7bxpi")
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, 8, -4.5625, 8, -4.1875, -4.125, 4.3125, -4.375, 3.8125, 8, 8, 8, 8, -8, -8, -8)
1:0/0 = 0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(8, -8, 8, -4.125, -4.375, -4.125, -4.75, 8, -8, 8, -8, -8)
2:0/0 = 0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(8, -8, 8, -4.125, -8, -4.4375, -8, -8)
3:0/0 = 0
3:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(8, 8, 4.125, 8, 4.125, -4.375, -8, -4.75, -8, -8, 8, -8)
4:0/0 = 0
5:0/0 = 0
0:1/0 = 0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4.375, -8, -8, -8, -8, 8, -4.25, 8)
0:1/0/physics_layer_0/polygon_1/points = PackedVector2Array(3.875, -8, 8, -8, 8, 8, 3.875, 8)
1:1/0 = 0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, -4.125, -8, -3.75, 8, -8, 8)
2:1/0 = 0
3:1/0 = 0
3:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(8, 8, 3.4375, 8, 3.9375, -8, 8, -8)
4:1/0 = 0
5:1/0 = 0
0:2/0 = 0
0:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, -4.5625, -8, -4.4375, 4.5, 4.3125, 4.375, 3.8125, -8, 8, -8, 8, 8, -8, 8)
1:2/0 = 0
1:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, -4.125, -8, -4.125, 4.375, 8, 4.75, 8, 8, -8, 8)
2:2/0 = 0
2:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, 8, -8, 4.125, 8, 3.75, 8, 8)
3:2/0 = 0
3:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, 8, -8, 4.125, 4.375, 4.125, 4.75, -8, 8, -8, 8, 8)
4:2/0 = 0
4:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(8, -8, 8, 8, -8, 8, -8, -8)
5:2/0 = 0
5:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(8, -8, 8, 8, -8, 8, -8, -8)
0:3/0 = 0
0:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-3.5625, -8, -8, -8, -8, 8, -3.9375, 8)
0:3/0/physics_layer_0/polygon_1/points = PackedVector2Array(3.875, -8, 8, -8, 8, 8, 3.875, 8)
0:3/0/physics_layer_0/polygon_2/points = PackedVector2Array(-3.4375, -6.375, 3.5625, -6.5, 3.4375, -8, -3.8125, -8)
0:3/0/physics_layer_0/polygon_3/points = PackedVector2Array(3.8125, 5.125, 3.4375, 8, -3.3125, 8, -3.6875, 5.25)
1:3/0 = 0
1:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(8, -8, 8, -4.5625, -4.5, -4.4375, -4.375, 4.3125, 8, 3.8125, 8, 8, -8, 8, -8, -8)
2:3/0 = 0
2:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, 4.375, -8, 8, 8, 8, 8, 4.25)
2:3/0/physics_layer_0/polygon_1/points = PackedVector2Array(-8, -3.875, -8, -8, 8, -8, 8, -3.875)
3:3/0 = 0
3:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, -8, -4.5625, 4.5, -4.4375, 4.375, 4.3125, -8, 4.375, -8, 8, 8, 8, 8, -8)
4:3/0 = 0
4:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(8, -8, 8, 8, -8, 8, -8, -8)
5:3/0 = 0
5:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(8, -8, 8, 8, -8, 8, -8, -8)

[sub_resource type="TileSet" id="TileSet_flw0h"]
physics_layer_0/collision_layer = 1
sources/1 = SubResource("TileSetAtlasSource_nfmkv")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_qxi8r"]
texture = ExtResource("5_5nx7y")
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:0/0/custom_data_0 = -1
1:0/0 = 0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:0/0 = 0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:0/0/custom_data_0 = 1
3:0/0 = 0
3:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:0/0/custom_data_0 = 2
4:0/0 = 0
4:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:0/0/custom_data_0 = 3
0:1/0 = 0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:1/0/custom_data_0 = -1
1:1/0 = 0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:1/0 = 0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:1/0/custom_data_0 = 1
3:1/0 = 0
3:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:1/0/custom_data_0 = 2
4:1/0 = 0
4:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:1/0/custom_data_0 = 3

[sub_resource type="TileSet" id="TileSet_py8na"]
physics_layer_0/collision_layer = 1
custom_data_layer_0/name = "break_status"
custom_data_layer_0/type = 2
sources/1 = SubResource("TileSetAtlasSource_qxi8r")

[node name="MiningMinigame" type="CanvasLayer"]
script = ExtResource("1_53a2a")

[node name="q_key" type="Sprite2D" parent="."]
position = Vector2(452, 40)
scale = Vector2(0.3, 0.3)
texture = ExtResource("2_auexb")

[node name="exit_symbol" type="Sprite2D" parent="."]
self_modulate = Color(0.804257, 0.23005, 0.296899, 1)
position = Vector2(452.6, 24.8)
scale = Vector2(0.45, 0.45)
texture = ExtResource("3_shgrt")

[node name="MiningGame" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="PanelContainer" type="PanelContainer" parent="MiningGame"]
z_index = -1
layout_mode = 0
offset_left = 5.0
offset_top = 9.0
offset_right = 476.0
offset_bottom = 265.0
theme_override_styles/panel = SubResource("StyleBoxTexture_w4flc")

[node name="MarginContainer" type="MarginContainer" parent="MiningGame/PanelContainer"]
visible = false
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="ground" type="TileMapLayer" parent="MiningGame/PanelContainer"]
z_index = -3
position = Vector2(-5, -8)
tile_map_data = PackedByteArray("AAADAAIAAQACAAEAAAAEAAIAAQACAAEAAAAEAAMAAQACAAEAAAAFAAMAAQACAAEAAAAGAAQAAQACAAEAAAAHAAUAAQACAAEAAAAIAAYAAQACAAEAAAAJAAYAAQACAAEAAAAJAAcAAQACAAEAAAAKAAcAAQACAAEAAAALAAcAAQACAAEAAAALAAgAAQACAAEAAAAMAAgAAQACAAEAAAAMAAkAAQACAAEAAAANAAkAAQACAAEAAAAOAAkAAQACAAEAAAAOAAoAAQACAAEAAAAPAAoAAQACAAEAAAAQAAoAAQACAAEAAAAQAAsAAQACAAEAAAARAAsAAQACAAEAAAASAAsAAQACAAEAAAATAAsAAQACAAEAAAATAAwAAQACAAEAAAAUAAwAAQACAAEAAAAVAAwAAQACAAEAAAAVAA0AAQACAAEAAAAWAA0AAQACAAEAAAADAAMAAQACAAEAAAADAAQAAQACAAEAAAADAAUAAQACAAEAAAADAAYAAQACAAEAAAADAAcAAQACAAEAAAADAAgAAQACAAEAAAADAAkAAQACAAEAAAADAAoAAQACAAEAAAADAAsAAQACAAEAAAADAAwAAQACAAEAAAADAA0AAQACAAEAAAADAA4AAQACAAEAAAAEAA4AAQACAAEAAAAFAA4AAQACAAEAAAAGAA4AAQACAAEAAAAHAA4AAQACAAEAAAAIAA4AAQACAAEAAAAJAA4AAQACAAEAAAAKAA4AAQACAAEAAAALAA4AAQACAAEAAAAMAA4AAQACAAEAAAANAA4AAQACAAEAAAAOAA4AAQACAAEAAAAPAA4AAQACAAEAAAAQAA4AAQACAAEAAAARAA4AAQACAAEAAAASAA4AAQACAAEAAAATAA4AAQACAAEAAAAUAA4AAQACAAEAAAAVAA4AAQACAAEAAAAWAA4AAQACAAEAAAAXAA4AAQACAAEAAAAYAA4AAQACAAEAAAAZAA4AAQACAAEAAAAaAA4AAQACAAEAAAAaAA0AAQACAAEAAAAaAAwAAQACAAEAAAAaAAsAAQACAAEAAAAaAAoAAQACAAEAAAAaAAkAAQACAAEAAAAaAAgAAQACAAEAAAAaAAcAAQACAAEAAAAaAAYAAQACAAEAAAAaAAUAAQACAAEAAAAaAAQAAQACAAEAAAAaAAMAAQACAAEAAAAaAAIAAQACAAEAAAAZAAIAAQACAAEAAAAYAAIAAQACAAEAAAAXAAIAAQACAAEAAAAWAAIAAQACAAEAAAAVAAIAAQACAAEAAAAUAAIAAQACAAEAAAATAAIAAQACAAEAAAASAAIAAQACAAEAAAARAAIAAQACAAEAAAAQAAIAAQACAAEAAAAPAAIAAQACAAEAAAAOAAIAAQACAAEAAAANAAIAAQACAAEAAAAMAAIAAQACAAEAAAALAAIAAQACAAEAAAAKAAIAAQACAAEAAAAJAAIAAQACAAEAAAAIAAIAAQACAAEAAAAHAAIAAQACAAEAAAAGAAIAAQACAAEAAAAFAAIAAQACAAEAAAAGAAMAAQACAAEAAAAHAAMAAQACAAEAAAAIAAMAAQACAAEAAAAHAAQAAQACAAEAAAAIAAQAAQACAAEAAAAIAAUAAQACAAEAAAAJAAQAAQACAAEAAAAJAAMAAQACAAEAAAAJAAUAAQACAAEAAAAKAAYAAQACAAEAAAAKAAUAAQACAAEAAAAKAAQAAQACAAEAAAAKAAMAAQACAAEAAAALAAMAAQACAAEAAAALAAQAAQACAAEAAAALAAUAAQACAAEAAAALAAYAAQACAAEAAAAMAAYAAQACAAEAAAAMAAUAAQACAAEAAAAMAAQAAQACAAEAAAAMAAMAAQACAAEAAAAMAAcAAQACAAEAAAANAAcAAQACAAEAAAANAAYAAQACAAEAAAANAAUAAQACAAEAAAANAAQAAQACAAEAAAANAAMAAQACAAEAAAAOAAUAAQACAAEAAAAOAAYAAQACAAEAAAAOAAcAAQACAAEAAAAOAAgAAQACAAEAAAAPAAgAAQACAAEAAAANAAgAAQACAAEAAAAOAAQAAQACAAEAAAAOAAMAAQACAAEAAAAPAAMAAQACAAEAAAAPAAQAAQACAAEAAAAPAAUAAQACAAEAAAAPAAYAAQACAAEAAAAPAAcAAQACAAEAAAAQAAkAAQACAAEAAAAQAAgAAQACAAEAAAAQAAcAAQACAAEAAAAQAAYAAQACAAEAAAAQAAUAAQACAAEAAAAQAAQAAQACAAEAAAAQAAMAAQACAAEAAAARAAMAAQACAAEAAAARAAQAAQACAAEAAAARAAUAAQACAAEAAAARAAYAAQACAAEAAAARAAcAAQACAAEAAAARAAgAAQACAAEAAAARAAkAAQACAAEAAAARAAoAAQACAAEAAAASAAoAAQACAAEAAAASAAkAAQACAAEAAAASAAgAAQACAAEAAAASAAcAAQACAAEAAAASAAYAAQACAAEAAAASAAUAAQACAAEAAAASAAQAAQACAAEAAAASAAMAAQACAAEAAAATAAMAAQACAAEAAAATAAQAAQACAAEAAAATAAUAAQACAAEAAAATAAYAAQACAAEAAAATAAcAAQACAAEAAAATAAgAAQACAAEAAAATAAkAAQACAAEAAAAUAAkAAQACAAEAAAAUAAoAAQACAAEAAAATAAoAAQACAAEAAAAUAAsAAQACAAEAAAAVAAsAAQACAAEAAAAWAAsAAQACAAEAAAAXAAsAAQACAAEAAAAXAAwAAQACAAEAAAAYAAwAAQACAAEAAAAXAA0AAQACAAEAAAAWAAwAAQACAAEAAAAYAA0AAQACAAEAAAAZAA0AAQACAAEAAAAZAAwAAQACAAEAAAAZAAsAAQACAAEAAAAZAAoAAQACAAEAAAAZAAkAAQACAAEAAAAZAAgAAQACAAEAAAAZAAcAAQACAAEAAAAZAAYAAQACAAEAAAAZAAUAAQACAAEAAAAZAAQAAQACAAEAAAAZAAMAAQACAAEAAAAYAAMAAQACAAEAAAAYAAQAAQACAAEAAAAYAAUAAQACAAEAAAAYAAYAAQACAAEAAAAYAAcAAQACAAEAAAAYAAgAAQACAAEAAAAYAAkAAQACAAEAAAAYAAoAAQACAAEAAAAYAAsAAQACAAEAAAAXAAoAAQACAAEAAAAXAAkAAQACAAEAAAAXAAgAAQACAAEAAAAXAAcAAQACAAEAAAAXAAYAAQACAAEAAAAXAAUAAQACAAEAAAAXAAQAAQACAAEAAAAXAAMAAQACAAEAAAAWAAMAAQACAAEAAAAWAAQAAQACAAEAAAAWAAUAAQACAAEAAAAWAAYAAQACAAEAAAAWAAcAAQACAAEAAAAWAAgAAQACAAEAAAAWAAkAAQACAAEAAAAWAAoAAQACAAEAAAAVAAQAAQACAAEAAAAVAAMAAQACAAEAAAAVAAUAAQACAAEAAAAVAAYAAQACAAEAAAAVAAcAAQACAAEAAAAVAAgAAQACAAEAAAAVAAkAAQACAAEAAAAVAAoAAQACAAEAAAAUAAcAAQACAAEAAAAUAAYAAQACAAEAAAAUAAUAAQACAAEAAAAUAAQAAQACAAEAAAAUAAMAAQACAAEAAAAUAAgAAQACAAEAAAAUAA0AAQACAAEAAAATAA0AAQACAAEAAAASAA0AAQACAAEAAAASAAwAAQACAAEAAAARAA0AAQACAAEAAAARAAwAAQACAAEAAAAQAAwAAQACAAEAAAAQAA0AAQACAAEAAAAPAA0AAQACAAEAAAAPAAwAAQACAAEAAAAPAAsAAQACAAEAAAAOAAwAAQACAAEAAAAOAA0AAQACAAEAAAAOAAsAAQACAAEAAAANAAoAAQACAAEAAAANAAsAAQACAAEAAAANAAwAAQACAAEAAAANAA0AAQACAAEAAAAMAAoAAQACAAEAAAAMAAsAAQACAAEAAAAMAAwAAQACAAEAAAAMAA0AAQACAAEAAAALAA0AAQACAAEAAAALAAwAAQACAAEAAAALAAsAAQACAAEAAAALAAoAAQACAAEAAAALAAkAAQACAAEAAAAKAA0AAQACAAEAAAAKAAwAAQACAAEAAAAKAAsAAQACAAEAAAAKAAoAAQACAAEAAAAKAAkAAQACAAEAAAAKAAgAAQACAAEAAAAJAAgAAQACAAEAAAAJAAkAAQACAAEAAAAJAAoAAQACAAEAAAAJAAsAAQACAAEAAAAJAAwAAQACAAEAAAAJAA0AAQACAAEAAAAIAA0AAQACAAEAAAAIAAwAAQACAAEAAAAIAAsAAQACAAEAAAAIAAoAAQACAAEAAAAIAAkAAQACAAEAAAAIAAgAAQACAAEAAAAIAAcAAQACAAEAAAAHAAYAAQACAAEAAAAHAAcAAQACAAEAAAAHAAgAAQACAAEAAAAHAAkAAQACAAEAAAAHAAoAAQACAAEAAAAHAAsAAQACAAEAAAAHAAwAAQACAAEAAAAHAA0AAQACAAEAAAAGAA0AAQACAAEAAAAGAAwAAQACAAEAAAAGAAsAAQACAAEAAAAGAAoAAQACAAEAAAAGAAkAAQACAAEAAAAGAAgAAQACAAEAAAAGAAcAAQACAAEAAAAGAAYAAQACAAEAAAAGAAUAAQACAAEAAAAFAAQAAQACAAEAAAAFAAUAAQACAAEAAAAFAAYAAQACAAEAAAAFAAcAAQACAAEAAAAFAAwAAQACAAEAAAAFAA0AAQACAAEAAAAFAAsAAQACAAEAAAAFAAoAAQACAAEAAAAFAAkAAQACAAEAAAAFAAgAAQACAAEAAAAEAAwAAQACAAEAAAAEAA0AAQACAAEAAAAEAAsAAQACAAEAAAAEAAoAAQACAAEAAAAEAAkAAQACAAEAAAAEAAgAAQACAAEAAAAEAAcAAQACAAEAAAAEAAYAAQACAAEAAAAEAAUAAQACAAEAAAAEAAQAAQACAAEAAAABAA0AAQAEAAMAAAABAA4AAQAEAAIAAAACAA0AAQAFAAMAAAACAA4AAQAFAAIAAAABAAsAAQAEAAMAAAABAAwAAQAEAAIAAAACAAsAAQAFAAMAAAACAAwAAQAFAAIAAAABAAkAAQAEAAMAAAABAAoAAQAEAAIAAAACAAkAAQAFAAMAAAACAAoAAQAFAAIAAAABAAcAAQAEAAMAAAABAAgAAQAEAAIAAAACAAcAAQAFAAMAAAACAAgAAQAFAAIAAAABAAUAAQAEAAMAAAABAAYAAQAEAAIAAAACAAUAAQAFAAMAAAACAAYAAQAFAAIAAAABAAMAAQAEAAMAAAABAAQAAQAEAAIAAAACAAMAAQAFAAMAAAACAAQAAQAFAAIAAAABAAIAAQAEAAIAAAACAAEAAQAEAAIAAAACAAIAAQAFAAIAAAADAAEAAQAFAAIAAAAEAAEAAQAEAAIAAAAFAAEAAQAFAAIAAAAGAAEAAQAEAAIAAAAHAAEAAQAFAAIAAAAIAAEAAQAEAAIAAAAJAAEAAQAFAAIAAAAKAAEAAQAEAAIAAAALAAEAAQAFAAIAAAAMAAEAAQAEAAIAAAANAAEAAQAFAAIAAAAOAAEAAQAEAAIAAAAPAAEAAQAFAAIAAAAQAAEAAQAEAAIAAAARAAEAAQAFAAIAAAASAAEAAQAEAAIAAAATAAEAAQAFAAIAAAAUAAEAAQAEAAIAAAAVAAEAAQAFAAIAAAAWAAEAAQAEAAIAAAAXAAEAAQAFAAIAAAAYAAEAAQAEAAIAAAAZAAEAAQAFAAIAAAAaAAEAAQAEAAIAAAAbAAEAAQAFAAIAAAAbAAIAAQAEAAIAAAAcAAIAAQAFAAIAAAAbAAMAAQAEAAMAAAAbAAQAAQAEAAIAAAAcAAMAAQAFAAMAAAAcAAQAAQAFAAIAAAAbAAUAAQAEAAMAAAAbAAYAAQAEAAIAAAAcAAUAAQAFAAMAAAAcAAYAAQAFAAIAAAAbAAcAAQAEAAMAAAAbAAgAAQAEAAIAAAAcAAcAAQAFAAMAAAAcAAgAAQAFAAIAAAAbAAkAAQAEAAMAAAAbAAoAAQAEAAIAAAAcAAkAAQAFAAMAAAAcAAoAAQAFAAIAAAAbAAsAAQAEAAMAAAAbAAwAAQAEAAIAAAAcAAsAAQAFAAMAAAAcAAwAAQAFAAIAAAAbAA0AAQAEAAMAAAAbAA4AAQAEAAIAAAAcAA0AAQAFAAMAAAAcAA4AAQAFAAIAAAACAA8AAQAEAAIAAAADAA8AAQAFAAIAAAAEAA8AAQAEAAIAAAAFAA8AAQAFAAIAAAAGAA8AAQAEAAIAAAAHAA8AAQAFAAIAAAAIAA8AAQAEAAIAAAAJAA8AAQAFAAIAAAAKAA8AAQAEAAIAAAALAA8AAQAFAAIAAAAMAA8AAQAEAAIAAAANAA8AAQAFAAIAAAAOAA8AAQAEAAIAAAAPAA8AAQAFAAIAAAAQAA8AAQAEAAIAAAARAA8AAQAFAAIAAAASAA8AAQAEAAIAAAATAA8AAQAFAAIAAAAUAA8AAQAEAAIAAAAVAA8AAQAFAAIAAAAWAA8AAQAEAAIAAAAXAA8AAQAFAAIAAAAYAA8AAQAEAAIAAAAZAA8AAQAFAAIAAAAaAA8AAQAEAAIAAAAbAA8AAQAFAAIAAAAPAAkAAQACAAEAAAA=")
tile_set = SubResource("TileSet_flw0h")

[node name="ores" type="TileMapLayer" parent="MiningGame/PanelContainer"]
z_index = -2
position = Vector2(-5, -8)
tile_map_data = PackedByteArray("AAADAAIAAQAAAAAAAAADAAMAAQAAAAAAAAADAAQAAQAAAAAAAAADAAUAAQAAAAAAAAADAAYAAQAAAAAAAAADAAcAAQAAAAAAAAADAAgAAQAAAAAAAAADAAkAAQAAAAAAAAADAAoAAQAAAAAAAAADAAsAAQAAAAAAAAADAAwAAQAAAAAAAAADAA0AAQAAAAAAAAADAA4AAQAAAAAAAAAEAAIAAQAAAAAAAAAEAAMAAQAAAAAAAAAEAAQAAQAAAAAAAAAEAAUAAQAAAAAAAAAEAAYAAQAAAAAAAAAEAAcAAQAAAAAAAAAEAAgAAQAAAAAAAAAEAAkAAQAAAAAAAAAEAAoAAQAAAAAAAAAEAAsAAQAAAAAAAAAEAAwAAQAAAAAAAAAEAA0AAQAAAAAAAAAEAA4AAQAAAAAAAAAFAAIAAQAAAAAAAAAFAAMAAQAAAAAAAAAFAAQAAQAAAAAAAAAFAAUAAQAAAAAAAAAFAAYAAQAAAAAAAAAFAAcAAQAAAAAAAAAFAAgAAQAAAAAAAAAFAAkAAQAAAAAAAAAFAAoAAQAAAAAAAAAFAAsAAQAAAAAAAAAFAAwAAQAAAAAAAAAFAA0AAQAAAAEAAAAFAA4AAQAAAAAAAAAGAAIAAQAAAAAAAAAGAAMAAQAAAAAAAAAGAAQAAQAAAAAAAAAGAAUAAQAAAAAAAAAGAAYAAQAAAAAAAAAGAAcAAQAAAAAAAAAGAAkAAQAAAAAAAAAGAAoAAQAAAAAAAAAGAAsAAQAAAAAAAAAGAAwAAQAAAAAAAAAGAA0AAQAAAAAAAAAGAA4AAQAAAAAAAAAHAAIAAQAAAAAAAAAHAAMAAQAAAAAAAAAHAAQAAQAAAAAAAAAHAAUAAQAAAAAAAAAHAAYAAQAAAAAAAAAHAAcAAQAAAAAAAAAHAAkAAQAAAAAAAAAHAAoAAQAAAAAAAAAHAAsAAQAAAAAAAAAHAAwAAQAAAAAAAAAHAA0AAQAAAAAAAAAHAA4AAQAAAAAAAAAIAAIAAQAAAAAAAAAIAAMAAQAAAAAAAAAIAAQAAQAAAAAAAAAIAAUAAQAAAAAAAAAIAAYAAQAAAAAAAAAIAAcAAQAAAAAAAAAIAAkAAQAAAAAAAAAIAAoAAQAAAAAAAAAIAAsAAQAAAAAAAAAIAAwAAQAAAAAAAAAIAA0AAQAAAAAAAAAIAA4AAQAAAAAAAAAJAAIAAQAAAAAAAAAJAAMAAQAAAAAAAAAJAAQAAQAAAAAAAAAJAAUAAQAAAAAAAAAJAAYAAQAAAAAAAAAJAAcAAQAAAAAAAAAJAA0AAQAAAAAAAAAJAA4AAQAAAAAAAAAKAAIAAQAAAAAAAAAKAAMAAQAAAAAAAAAKAAQAAQAAAAAAAAAKAAUAAQAAAAAAAAAKAAYAAQAAAAAAAAAKAAcAAQAAAAAAAAAKAAkAAQAAAAAAAAAKAAoAAQAAAAAAAAAKAAsAAQAAAAAAAAAKAAwAAQAAAAAAAAAKAA0AAQAAAAAAAAAKAA4AAQAAAAAAAAALAAIAAQAAAAAAAAALAAMAAQAAAAAAAAALAAQAAQAAAAAAAAALAAkAAQAAAAAAAAALAAoAAQAAAAAAAAALAAsAAQAAAAAAAAALAAwAAQAAAAAAAAALAA0AAQAAAAAAAAALAA4AAQAAAAAAAAAMAAIAAQAAAAAAAAAMAAMAAQAAAAAAAAAMAAQAAQAAAAAAAAAMAAUAAQAAAAAAAAAMAAYAAQAAAAAAAAAMAAcAAQAAAAAAAAAMAAkAAQAAAAAAAAAMAAoAAQAAAAAAAAAMAAsAAQAAAAAAAAAMAAwAAQAAAAAAAAAMAA0AAQAAAAAAAAAMAA4AAQAAAAAAAAANAAIAAQAAAAAAAAANAAMAAQAAAAAAAAANAAQAAQAAAAAAAAANAAUAAQAAAAAAAAANAAYAAQAAAAAAAAANAAcAAQAAAAAAAAANAAkAAQAAAAAAAAANAAoAAQAAAAAAAAANAAsAAQAAAAAAAAANAAwAAQAAAAAAAAANAA0AAQAAAAAAAAANAA4AAQAAAAAAAAAOAAIAAQAAAAAAAAAOAAMAAQAAAAAAAAAOAAQAAQAAAAAAAAAOAAUAAQAAAAAAAAAOAAYAAQAAAAAAAAAOAAcAAQAAAAAAAAAOAAkAAQAAAAAAAAAOAAoAAQAAAAAAAAAOAAsAAQAAAAAAAAAOAAwAAQAAAAAAAAAOAA0AAQAAAAAAAAAOAA4AAQAAAAAAAAAPAAIAAQAAAAAAAAAPAAMAAQAAAAAAAAAPAAQAAQAAAAAAAAAPAAsAAQAAAAAAAAAPAAwAAQAAAAAAAAAPAA0AAQAAAAAAAAAPAA4AAQAAAAAAAAAQAAIAAQAAAAAAAAAQAAMAAQAAAAAAAAAQAAQAAQAAAAAAAAAQAAUAAQAAAAAAAAAQAAYAAQAAAAAAAAAQAAcAAQAAAAAAAAAQAAgAAQAAAAAAAAAQAAkAAQAAAAAAAAAQAAoAAQAAAAAAAAAQAAsAAQAAAAAAAAAQAAwAAQAAAAAAAAAQAA0AAQAAAAAAAAAQAA4AAQAAAAAAAAARAAIAAQAAAAAAAAARAAMAAQAAAAAAAAARAAQAAQAAAAAAAAARAAUAAQAAAAAAAAARAAYAAQAAAAAAAAARAAcAAQAAAAAAAAARAAgAAQAAAAAAAAARAAkAAQAAAAAAAAARAAoAAQAAAAAAAAARAAsAAQAAAAAAAAARAAwAAQAAAAAAAAARAA0AAQAAAAAAAAARAA4AAQAAAAAAAAASAAIAAQAAAAAAAAASAAMAAQAAAAAAAAASAAQAAQAAAAAAAAASAAUAAQAAAAAAAAASAAYAAQAAAAAAAAASAAcAAQAAAAAAAAASAAgAAQAAAAAAAAASAAkAAQAAAAAAAAASAAoAAQAAAAAAAAASAAsAAQAAAAAAAAASAAwAAQAAAAAAAAASAA0AAQAAAAAAAAASAA4AAQAAAAAAAAATAAIAAQAAAAAAAAATAAMAAQAAAAEAAAATAAQAAQAAAAAAAAATAAUAAQAAAAAAAAATAAYAAQAAAAAAAAATAAcAAQAAAAAAAAATAAgAAQAAAAAAAAATAAkAAQAAAAAAAAATAAoAAQAAAAAAAAATAAsAAQAAAAAAAAATAAwAAQAAAAAAAAATAA0AAQAAAAAAAAATAA4AAQAAAAAAAAAUAAIAAQAAAAAAAAAUAAMAAQAAAAAAAAAUAAQAAQAAAAAAAAAUAAUAAQAAAAAAAAAUAAYAAQAAAAAAAAAUAAcAAQAAAAAAAAAUAAgAAQAAAAAAAAAUAAkAAQAAAAAAAAAUAAoAAQAAAAAAAAAUAAsAAQAAAAAAAAAUAAwAAQAAAAAAAAAUAA0AAQAAAAAAAAAUAA4AAQAAAAAAAAAVAAIAAQAAAAAAAAAVAAMAAQAAAAAAAAAVAAQAAQAAAAAAAAAVAAUAAQAAAAAAAAAVAAYAAQAAAAAAAAAVAAcAAQAAAAAAAAAVAAgAAQAAAAAAAAAVAAkAAQAAAAAAAAAVAAoAAQAAAAAAAAAVAAsAAQAAAAAAAAAVAAwAAQAAAAAAAAAVAA0AAQAAAAAAAAAVAA4AAQAAAAAAAAAWAAIAAQAAAAAAAAAWAAMAAQAAAAAAAAAWAAQAAQAAAAAAAAAWAAUAAQAAAAAAAAAWAAYAAQAAAAAAAAAWAAcAAQAAAAAAAAAWAAgAAQAAAAAAAAAWAAkAAQAAAAAAAAAWAAoAAQAAAAAAAAAWAAsAAQAAAAAAAAAWAAwAAQAAAAAAAAAWAA0AAQAAAAEAAAAWAA4AAQAAAAAAAAAXAAIAAQAAAAAAAAAXAAMAAQAAAAAAAAAXAAQAAQAAAAAAAAAXAAUAAQAAAAAAAAAXAAYAAQAAAAAAAAAXAAcAAQAAAAAAAAAXAAgAAQAAAAAAAAAXAAkAAQAAAAAAAAAXAAoAAQAAAAAAAAAXAAsAAQAAAAAAAAAXAAwAAQAAAAAAAAAXAA0AAQAAAAAAAAAXAA4AAQAAAAAAAAAYAAIAAQAAAAAAAAAYAAMAAQAAAAAAAAAYAAQAAQAAAAAAAAAYAAUAAQAAAAAAAAAYAAYAAQAAAAAAAAAYAAcAAQAAAAEAAAAYAAgAAQAAAAAAAAAYAAkAAQAAAAAAAAAYAAoAAQAAAAAAAAAYAAsAAQAAAAAAAAAYAAwAAQAAAAAAAAAYAA0AAQAAAAAAAAAYAA4AAQAAAAAAAAAZAAIAAQAAAAAAAAAZAAMAAQAAAAAAAAAZAAQAAQAAAAAAAAAZAAUAAQAAAAAAAAAZAAYAAQAAAAAAAAAZAAcAAQAAAAAAAAAZAAgAAQAAAAAAAAAZAAkAAQAAAAAAAAAZAAoAAQAAAAAAAAAZAAsAAQAAAAAAAAAZAAwAAQAAAAAAAAAZAA0AAQAAAAAAAAAZAA4AAQAAAAAAAAAaAAIAAQAAAAAAAAAaAAMAAQAAAAAAAAAaAAQAAQAAAAAAAAAaAAUAAQAAAAAAAAAaAAYAAQAAAAAAAAAaAAcAAQAAAAAAAAAaAAgAAQAAAAAAAAAaAAkAAQAAAAAAAAAaAAoAAQAAAAAAAAAaAAsAAQAAAAAAAAAaAAwAAQAAAAAAAAAaAA0AAQAAAAAAAAAaAA4AAQAAAAAAAAAJAAwAAQAAAAAAAAAGAAgAAQAAAAAAAAAHAAgAAQAAAAAAAAAIAAgAAQAAAAAAAAAJAAgAAQAAAAEAAAAJAAkAAQAAAAAAAAAJAAoAAQAAAAAAAAAJAAsAAQAAAAAAAAALAAUAAQAAAAAAAAALAAYAAQAAAAAAAAALAAcAAQAAAAAAAAAKAAgAAQAAAAAAAAALAAgAAQAAAAAAAAAMAAgAAQAAAAAAAAANAAgAAQAAAAAAAAAOAAgAAQAAAAAAAAAPAAUAAQAAAAAAAAAPAAYAAQAAAAAAAAAPAAcAAQAAAAAAAAAPAAkAAQAAAAAAAAAPAAoAAQAAAAAAAAA=")
tile_set = SubResource("TileSet_py8na")

[node name="CanvasModulate" parent="MiningGame" instance=ExtResource("1_to58y")]
visible = false
color = Color(0.254848, 0.212149, 0.332137, 1)
script = null

[node name="MinerCat" parent="." instance=ExtResource("3_h7jpv")]
position = Vector2(247, 135)

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="MinerCat"]
remote_path = NodePath("..")

[node name="f_key" type="Sprite2D" parent="MinerCat"]
self_modulate = Color(1, 1, 1, 0.705882)
position = Vector2(0, -12)
scale = Vector2(0.15, 0.15)
texture = ExtResource("7_re27u")

[node name="MinerCooldown" type="Timer" parent="."]

[connection signal="timeout" from="MinerCooldown" to="." method="_on_miner_cooldown_timeout"]
